fix header and footer imports

--- a/website/TOS.html
+++ b/website/TOS.html
@@ -116,13 +116,9 @@
     </div>
 
     <!-- Include the footer -->
-    <div id="footer-placeholder">
-        <footer>
-            <a href="#">Loading...</a>
-        </footer>
-    </div>
+    <div id="footer-placeholder"></div>
 
     <!-- Script to load header and footer -->
-    <script src="imports/loadImports.js" defer></script>
+    <script src="imports/loadImports.js"></script>
 </body>
 </html>
