--- a/website/course_placeholder.html
+++ b/website/course_placeholder.html
@@ -18,11 +18,7 @@
   </div>
 
   <!-- Footer placeholder -->
-  <div id="footer-placeholder">
-    <footer>
-      <a href="#">Loading...</a>
-    </footer>
-  </div>
+  <div id="footer-placeholder"></div>
 
   <!-- Load header and footer components -->
   <script src="imports/loadImports.js"></script>
