--- a/website/imports/footer.html
+++ b/website/imports/footer.html
@@ -1,5 +1,10 @@
 <!-- Footer Component -->
 <footer>
     <a href="TOS.html">Terms of Service</a>
+    <span>|</span>
     <a href="privacy.html">Privacy Policy</a>
-</footer> 
+    <span>|</span>
+    <a href="#" id="login-footer">Login</a>
+    <span>|</span>
+    <a href="#" id="register-footer">Register</a>
+</footer>
