--- a/website/quiz1.html
+++ b/website/quiz1.html
@@ -90,17 +90,11 @@ Mastering keyboard shortcuts is a step towards both efficiency and effectiveness
     <div id="quiz-result"></div>
   </div>
 
-  <footer>
-    <a href="TOS.html">Terms of Service</a>
-    <span>|</span>
-    <a href="privacy.html">Privacy Policy</a>
-    <!-- Future links for account management -->
-    <span>|</span>
-    <a href="#" id="login-footer">Login</a>
-    <span>|</span>
-    <a href="#" id="register-footer">Register</a>
-    <p>© 2023 Digital Literacy Initiative</p>
-  </footer>
+  <!-- Include the footer -->
+  <div id="footer-placeholder"></div>
+
+  <!-- Script to load header and footer -->
+  <script src="imports/loadImports.js"></script>
 
   <script>
     // Variables to store quiz answers
