--- a/website/imports/header.html
+++ b/website/imports/header.html
@@ -1,16 +1,13 @@
 <!-- Header Component -->
 <header>
-    <!-- Logo Placeholder -->
     <div class="logo">
-        <!-- Replace 'path/to/logo.png' with the actual path to your logo -->
-        <img src="path/to/logo.png" alt="Logo">
+        <img src="assets/images/logo.png" alt="Logo" id="logo-img">
     </div>
     <nav class="nav-left">
-        <a href="index.html">Home</a>
-        <a href="course_content.html">Courses</a>
+        <a href="index.html" id="home-link">Home</a>
+        <a href="course_content.html" id="courses-link">Courses</a>
     </nav>
     <nav class="nav-right">
-        <!-- Placeholder links for future account system -->
         <a href="#" id="login-button">Login</a>
         <a href="#" id="register-button">Register</a>
     </nav>
