--- a/website/index.html
+++ b/website/index.html
@@ -33,11 +33,7 @@
     </div>
 
     <!-- Include the footer -->
-    <div id="footer-placeholder">
-        <footer>
-            <a href="#">Loading...</a>
-        </footer>
-    </div>
+    <div id="footer-placeholder"></div>
 
     <!-- Script to load header and footer -->
     <script src="imports/loadImports.js"></script>
