remove extra files from quiz library

--- a/website/certificate.html
+++ b/website/certificate.html
@@ -98,6 +98,7 @@
 		Invalid certificate request. Please complete the course to receive your certificate.
 	</div>
 
+	<script src="scripts/certificate-utils.js"></script>
 	<script src="scripts/certificate.js"></script>
 </body>
 </html>
