--- a/website/quiz1.html
+++ b/website/quiz1.html
@@ -95,6 +95,7 @@
     }
   </style>
   <script src="scripts/quiz-certificate.js" defer></script>
+  <script src="scripts/certificate-utils.js" defer></script>
 </head>
 <body>
   <!-- Header Placeholder -->
