--- a/website/imports/header.html
+++ b/website/imports/header.html
@@ -1,7 +1,7 @@
 <!-- Header Component -->
 <header>
     <div class="logo">
-        <img src="assets/images/logo.png" alt="Logo" id="logo-img">
+        <img src="images/wwt.png" alt="WWT Logo" id="logo-img">
     </div>
     <nav class="nav-left">
         <a href="index.html" id="home-link">Home</a>
@@ -18,6 +18,12 @@
 </header>
 
 <style>
+    /* Logo styles */
+    .logo img {
+        height: 65px;
+        width: auto;
+    }
+
     .theme-toggle {
         background: none;
         border: none;
