--- a/website/imports/header.html
+++ b/website/imports/header.html
@@ -1,7 +1,7 @@
 <!-- Header Component -->
 <header>
     <div class="logo">
-        <img src="images/wwt.png" alt="WWT Logo" id="logo-img">
+        <img src="images/wwt-simple.png" alt="WWT Logo" id="logo-img">
     </div>
     <nav class="nav-left">
         <a href="index.html" id="home-link">Home</a>
@@ -13,15 +13,28 @@
         </button>
         <a href="#" id="login-button">Login</a>
         <a href="#" id="register-button">Register</a>
-
     </nav>
 </header>
 
 <style>
     /* Logo styles */
+    .logo {
+        padding: 0 2px;
+        display: flex;
+        align-items: left;
+        min-width: 200px;
+    }
+
     .logo img {
         height: 65px;
         width: auto;
+        display: block;
+    }
+
+    /* Header layout */
+    header {
+        padding: 0 20px;
+        height: 65px;
     }
 
     .theme-toggle {
