--- a/website/imports/header.html
+++ b/website/imports/header.html
@@ -19,10 +19,10 @@
 <style>
     /* Logo styles */
     .logo {
-        padding: 0 2px;
         display: flex;
-        align-items: left;
-        min-width: 200px;
+        align-items: center;
+        min-width: fit-content;
+        padding: 0;
     }
 
     .logo img {
@@ -33,16 +33,38 @@
 
     /* Header layout */
     header {
-        padding: 0 20px;
-        height: 65px;
+        padding: 0 15px 0 10px;
     }
 
+    header nav {
+        gap: 5px;
+    }
+
+    .nav-left {
+        margin-left: 5px;
+    }
+
+    .nav-right {
+        margin-left: auto;
+        gap: 5px;
+    }
+
+    /* Navigation link styles */
+    #home-link, #courses-link, #login-button, #register-button {
+        padding: 8px 12px;
+        border-radius: 6px;
+        transition: background-color 0.3s;
+        text-decoration: none;
+        color: var(--text-color);
+        border: 1px solid var(--border-color);
+    }
+
+    /* Theme toggle specific styles */
     .theme-toggle {
         background: none;
         border: none;
         cursor: pointer;
         padding: 8px;
-        margin-right: 10px;
         border-radius: 50%;
         transition: background-color 0.3s;
         color: var(--text-color);
