move docs folder into images directory

--- a/website/course_content.html
+++ b/website/course_content.html
@@ -29,7 +29,7 @@
             <ul>
                 <li><strong>Copy:</strong> <code>Ctrl + C</code> (Windows) / <code>Cmd + C</code> (macOS)
                     <!-- Ensure the image is responsive and doesn't overflow -->
-                    <img src="docs/image.png" alt="Copy Keybind Example" class="list-image">
+                    <img src="images/docs/image.png" alt="Copy Keybind Example" class="list-image">
                 </li>
                 <li><strong>Paste:</strong> <code>Ctrl + V</code> (Windows) / <code>Cmd + V</code> (macOS)</li>
                 <li><strong>Cut:</strong> <code>Ctrl + X</code> (Windows) / <code>Cmd + X</code> (macOS)</li>
