--- a/website/certificate.html
+++ b/website/certificate.html
@@ -4,7 +4,15 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Course Completion Certificate</title>
+	<link rel="stylesheet" href="styles/styles.css">
+	<script src="scripts/theme-switcher.js" defer></script>
 	<style>
+		:root {
+			--certificate-primary: #1a5f7a;
+			--certificate-text-dark: #333;
+			--certificate-text-muted: #666;
+		}
+
 		body {
 			font-family: 'Arial', sans-serif;
 			display: flex;
@@ -12,12 +20,13 @@
 			align-items: center;
 			min-height: 100vh;
 			margin: 0;
-			background-color: #f5f5f5;
+			background-color: var(--background-color);
+			color: var(--text-color);
 		}
 		.certificate {
 			background-color: white;
 			padding: 40px;
-			border: 20px solid #1a5f7a;
+			border: 20px solid var(--certificate-primary);
 			width: 800px;
 			text-align: center;
 			position: relative;
@@ -30,46 +39,52 @@
 			left: 0;
 			right: 0;
 			bottom: 0;
-			border: 2px solid #1a5f7a;
+			border: 2px solid var(--certificate-primary);
 			margin: 20px;
 			pointer-events: none;
 		}
 		.header {
-			color: #1a5f7a;
+			color: var(--certificate-primary);
 			font-size: 48px;
 			margin-bottom: 20px;
 			font-weight: bold;
 		}
 		.sub-header {
 			font-size: 24px;
-			color: #333;
+			color: var(--certificate-text-dark);
 			margin-bottom: 30px;
 		}
 		.recipient {
 			font-size: 36px;
-			color: #1a5f7a;
+			color: var(--certificate-primary);
 			margin: 20px 0;
 			font-style: italic;
 		}
 		.description {
 			font-size: 18px;
-			color: #555;
+			color: var(--certificate-text-dark);
 			margin: 20px 0;
 			line-height: 1.6;
 		}
 		.date {
 			font-size: 18px;
-			color: #666;
+			color: var(--certificate-text-muted);
 			margin: 30px 0;
 		}
 		.signature {
 			margin-top: 40px;
-			border-top: 2px solid #1a5f7a;
+			border-top: 2px solid var(--certificate-primary);
 			width: 200px;
 			display: inline-block;
 			padding-top: 10px;
 			font-weight: bold;
-			color: #1a5f7a;
+			color: var(--certificate-primary);
+		}
+		#errorMessage {
+			text-align: center;
+			color: var(--incorrect-warning-color);
+			font-size: 24px;
+			display: none;
 		}
 		@media print {
 			body {
@@ -94,7 +109,7 @@
 		<div class="date" id="certDate"></div>
 		<div class="signature">Course Administrator</div>
 	</div>
-	<div id="errorMessage" style="text-align: center; color: #ff0000; font-size: 24px; display: none;">
+	<div id="errorMessage">
 		Invalid certificate request. Please complete the course to receive your certificate.
 	</div>
 
