move quiz into it's own folder

--- a/website/course_content.html
+++ b/website/course_content.html
@@ -110,7 +110,7 @@
             </ul>
         </section>
 
-        <a href="quiz1.html" class="quiz-button button">Take the Quiz</a>
+        <a href="keybinds-quiz/index.html" class="quiz-button button">Take the Quiz</a>
     </div>
 
     <!-- Include the footer -->
