--- a/website/digital literacy shortcuts/hub.html
+++ b/website/digital literacy shortcuts/hub.html
@@ -88,7 +88,7 @@
         <div class="quiz-section">
             <h2>Interactive Keyboard Shortcuts Quiz</h2>
             <p>Test your knowledge of keyboard shortcuts with this interactive quiz.</p>
-            <a href="../quiz1.html" class="quiz-button">Start Quiz</a>
+            <a href="../keybinds-quiz/index.html" class="quiz-button">Start Quiz</a>
         </div>
     </div>
 
