--- a/website/digital literacy shortcuts/select_all.html
+++ b/website/digital literacy shortcuts/select_all.html
@@ -69,7 +69,7 @@
 
         <div class="navigation">
             <a href="hub.html">&#8592; Back to Hub</a>
-            <a href="../quiz1.html">Start the quiz &#8594;</a>
+            <a href="../keybinds-quiz/index.html">Start the quiz &#8594;</a>
         </div>
     </div>
 
